<resources>
    <string name="app_name">Tactic Collector</string>
    <string name="company_name">Tatic Logistic</string>
    <string name="image_description">Tatic Logistic</string>

    <string name="navigation_item_home">Inicio</string>
    <string name="navigation_item_bodegas">Bodegas</string>
    <string name="navigation_item_oe">Ordenes de Entrada</string>
    <string name="navigation_item_os">Ordenes de Salida</string>
    <string name="navigation_item_close">Cerrar Sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="estado_oe_confirmada">Confirmada</string>
    <string name="estado_oe_aceptada">Aceptada</string>
    <string name="estado_oe_enjecucion">En Ejecución</string>
    <string name="estado_oe_finalizada">Finalizada</string>

    <string name="bod_selected">Ha seleccionado la Bodega %S</string>
    <string name="bod_msg_vacio">Este usuario no tiene bodegas asignadas!</string>

    <string name="oe_title">Orden de Entrada: %S</string>
    <string name="oe_subtitle">Datos de la Orden</string>
    <string name="oe_estado">Estado:</string>
    <string name="oe_nro_orden">Nro Orden:</string>
    <string name="oe_cliente">Cliente:</string>
    <string name="oe_hora_llegada_esperada">Hora Llegada Esperada:</string>
    <string name="oe_hora_llegada_real">Hora Llegada Real:</string>
    <string name="oe_placa">Placa Vehículo:</string>
    <string name="oe_opcion_1">Llegada de Vehículo</string>
    <string name="oe_opcion_2">Conductor y Vehículo</string>
    <string name="oe_opcion_3">Datos de Descarga</string>
    <string name="oe_opcion_4">Novedades</string>
    <string name="oe_opcion_5">Documentos</string>
    <string name="oe_opcion_6">Salida de Vehículo</string>
    <string name="oe_msg_vacio">Inicialmente debe seleccionar una Bodega!</string>
    <string name="oe_estado_par">Estado: %s</string>
    <string name="oe_nro_orden_par">Nro Orden: %s</string>
    <string name="oe_hora_llegada_par">Hora de Llegada: %s</string>
    <string name="oe_cliente_par">Cliente: %s</string>
    <string name="oe_obs">Observaciones</string>

    <string name="veh_title">Datos de Vehículo</string>
    <string name="veh_transportadora">Transportadora</string>
    <string name="veh_tipo">Tipo de Vehículo</string>
    <string name="veh_placa">Placa Vehículo</string>
    <string name="veh_remolque">Placa Remolque</string>

    <string name="con_title">Datos del Conductor</string>
    <string name="con_cedula">Cédula</string>
    <string name="con_nombres">Nombres</string>
    <string name="con_apellidos">Apellidos</string>
    <string name="con_celular">Celular</string>

    <string name="veh_fot_title">Fotos del Vehículo</string>
    <string name="oe_salida_subtitle">Datos de Salida</string>

    <string name="oe_novedades_subtitle">Novedades</string>
    <string name="oe_novedades_subtitle_1">Novedades en Ingreso</string>
    <string name="oe_tipo">Tipo de Novedad</string>
    <string name="oe_clase">Clase de Novedad</string>

    <string name="btn_save">Aceptar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_select">Seleccionar</string>

    <string name="msg_loading">Espere un momento...</string>
    <string name="msg_required">"Todos los datos son Obligatorios"</string>
    <string name="msg_ok">"Operación Realizada con Éxito!"</string>
    <string name="msg_prompt">-- Seleccione --</string>
    <string name="msg_coming_soon">Esta opción está en proceso de construcción</string>

    <string-array name="oe_novedades_tipo">
        <item>Ingreso</item>
    </string-array>

    <string-array name="oe_novedades_clase">
        <item>Faltantes</item>
        <item>Sobrantes</item>
        <item>Daño de Carpa</item>
    </string-array>

</resources>
