<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_item_home" />
        <item
            android:id="@+id/nav_bodegas"
            android:icon="@drawable/ic_store"
            android:title="@string/navigation_item_bodegas" />
        <item
            android:id="@+id/nav_oe"
            android:icon="@drawable/ic_truck"
            android:title="@string/navigation_item_oe" />
        <item
            android:id="@+id/nav_os"
            android:icon="@drawable/ic_truck_exit"
            android:title="@string/navigation_item_os" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_close_session"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/navigation_item_close" />
   </group>


</menu>
