<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itm_estado_oe_confirmada"
            android:orderInCategory="10"
            android:title="@string/estado_oe_confirmada"
            app:showAsAction="never" />

        <item
            android:id="@+id/itm_estado_oe_aceptada"
            android:orderInCategory="20"
            android:title="@string/estado_oe_aceptada"
            app:showAsAction="never" />

        <item
            android:id="@+id/itm_estado_oe_enjecucion"
            android:orderInCategory="30"
            android:title="@string/estado_oe_enjecucion"
            app:showAsAction="never" />

        <item
            android:id="@+id/itm_estado_oe_finalizada"
            android:orderInCategory="40"
            android:title="@string/estado_oe_finalizada"
            app:showAsAction="never" />
    </group>
</menu>
