<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:id="@+id/grd_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="4"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/veh_title"
            android:textSize="22sp"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:text="@string/veh_transportadora"
            android:layout_gravity="left"
            android:layout_marginTop="20sp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <Spinner
            android:id="@+id/spn_transportadoras"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"/>

        <TextView
            android:text="@string/veh_tipo"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <Spinner
            android:id="@+id/spn_tipos_vehiculos"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"/>

        <TextView
            android:text="@string/veh_placa"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/input_veh_placa"
            android:ems="25"
            android:textSize="18sp"
            android:textStyle="normal"
            android:inputType="textCapCharacters" />

        <TextView
            android:text="@string/veh_remolque"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/input_veh_remolque"
            android:ems="25"
            android:textSize="18sp"
            android:textStyle="normal"
            android:inputType="textCapCharacters" />

        <TextView
            android:text="@string/con_title"
            android:textSize="22sp"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20sp"/>

        <TextView
            android:text="@string/con_cedula"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/input_con_cedula"
            android:ems="25"
            android:textSize="18sp"
            android:textStyle="normal"
            android:inputType="number"
            android:maxLength="10"/>

        <TextView
            android:text="@string/con_nombres"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/input_con_nombres"
            android:ems="25"
            android:textSize="18sp"
            android:textStyle="normal"
            android:inputType="textCapSentences"
            android:maxLength="30"/>

        <TextView
            android:text="@string/con_apellidos"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/input_con_apellidos"
            android:ems="25"
            android:textSize="18sp"
            android:textStyle="normal"
            android:inputType="textCapSentences" />

        <TextView
            android:text="@string/con_celular"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/input_con_celular"
            android:ems="28"
            android:textSize="18sp"
            android:textStyle="normal"
            android:inputType="phone"
            android:maxLength="10"/>

    </GridLayout>

</RelativeLayout>