<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lyr_foto">

        <TextView
            android:text="@string/oe_novedades_subtitle"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"/>

        <ImageView
            android:id="@+id/imgView_pic"
            android:tag="0"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_action_help"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lyr_datos"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lyr_foto">

        <TextView
            android:text="@string/oe_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="left"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/input_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/oe_novedades_tipo"
            android:prompt="@string/msg_prompt"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/oe_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="left"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/input_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/oe_novedades_clase"
            android:prompt="@string/msg_prompt"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/oe_obs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="left"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/input_obs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="3"
            android:maxLines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"
                android:textSize="15sp"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>